# github-sdv-poc-msp-aws-iot-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  pyproject.toml
.github/workflows/: ci.yml  main.yml
aws_iot/: .clang-format  package.xml
aws_iot/include/aws_iot/: client_iot.hpp  client_iot_impl.hpp
aws_iot/src/: client_iot.cpp  client_iot_impl.cpp  main.cpp
include/aws_iot/: client_iot.hpp
src/: client_iot.cpp
tests/: iot-bridge-config.yaml
tests/iot_bridge_tests/: test_iot_bridge_component.py
